RESOLVED FIXED286149
Flex container with `overflow: scroll` does not correctly account for the inline margin end of flex items to determine the scrollable area
https://bugs.webkit.org/show_bug.cgi?id=286149
Summary Flex container with `overflow: scroll` does not correctly account for the inl...
Attachments
Patch (6.07 KB, patch)
2025-01-17 10:01 PST, alan
no flags
Patch (6.01 KB, patch)
2025-02-08 21:06 PST, alan
no flags
[fast-cq]Patch (6.01 KB, patch)
2025-02-10 05:22 PST, alan
no flags
alan
Comment 1 2025-01-17 10:01:51 PST
Radar WebKit Bug Importer
Comment 2 2025-01-24 09:56:15 PST
alan
Comment 3 2025-02-08 21:06:27 PST
alan
Comment 4 2025-02-10 05:22:57 PST
Created attachment 474175 [details] [fast-cq]Patch
EWS
Comment 5 2025-02-10 07:00:33 PST
Committed 290159@main (fbf46c89f807): <https://commits.webkit.org/290159@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 474175 [details].
Note You need to log in before you can comment on or make changes to this bug.