Flex container with `overflow: scroll` does not correctly account for the inline margin end of flex items to determine the scrollable area https://bugs.webkit.org/show_bug.cgi?id=286149

Reviewed by Antti Koivisto.

"The scrollable overflow area is the union of:
..
The margin areas of grid item and flex item boxes for which the box establishes a containing block.
.."

https://drafts.csswg.org/css-overflow-3/#scrollable

* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/scrollable-overflow-with-flex-item-margin-inline-end-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/scrollable-overflow-with-flex-item-margin-inline-end.html: Added.
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::layoutOverflowRectForPropagation const):

Canonical link: https://commits.webkit.org/290159@main